[project]
name = "github-repo-info"

#  Using calver 'YYYY.0M.MICRO' for package version.
version = "2025.12.3"

requires-python = ">=3.10"
dependencies = [
    "pygithub>=2.6.1",
    "rich>=14.2.0",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
# extend-select = ["ALL"]

[dependency-groups]
dev = [
    "rich>=14.0.0",
    "ruff>=0.11.8",
]
